 * along with redEVENT; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */

Version 2.0 beta 2.1
* Fixed missing default_jsscript file
* Fixed usercheck giving DB error
* Fixed incorrect tags
* Fixed venue deletion
* Fixed SQL error in venues
/ Moved courseinfo.php and courseinfo_pdf.php to details/tmpl folder for override

Version 2.0 beta 2
* Restored availability overview
* Restored event image
* Restored category link
* Fixed front-end event editing
+ Added missing language strings
* Fixed multiple warnings
/ Moved price and credit to venue settings
+ Added [eventplaces], [waitinglistplaces], [eventplacesleft], [waitinglistplacesleft] tags
/ Updated help section
+ Added event images in the category view
+ Added text library
/ Updated images
* Fixed archived events view
* Link registered users to a new page
- Removed redFORM yes/no from settings. This is controlled by the [redform] tag
* Fixed date and time settings not being saved.

Version 2.0 beta 1.1
* Fixed installer to work on clean installations
* Fixed error on saving event
/ Updated installer to no longer required un-installation

Version 2.0 beta 1
/ Complete rewrite of many parts of the program

Version 1.0 beta 43
* Fixed simplelist given fatal error
- Removed legacy check for jComment integration check
* Fixed undefined error if no forms are active in redFORM
* Fixed confirmation page not using redEVENT date and time settings

Version 1.0 beta 42
* Fixed events not saving on certain MySQL installations
* Fixed undefined errors
- Removed obsolete div
 
Version 1.0 beta 41
/ Updated images

Version 1.0 beta 40
* Fixed Lightbox popup not showing
/ Changed registration section not to show if redFORM is not installed
* Fixed confirmation mail not to properly fill tags
- Removed obsolete div
/ Changed archive to show only selected event
/ Updated images
 
Version 1.0 beta 39
* Fixed URL showing on details page even when empty